src/test/ui/consts/issue-32829-2.stderr
error[E0015]: calls in constants are limited to constant functions, tuple structs and tuple variants
  --> $DIR/issue-32829-2.rs:12:9
   |
LL |         invalid();
   |         ^^^^^^^^^

error[E0015]: calls in statics are limited to constant functions, tuple structs and tuple variants
  --> $DIR/issue-32829-2.rs:34:9
   |
LL |         invalid();
   |         ^^^^^^^^^

error[E0015]: calls in statics are limited to constant functions, tuple structs and tuple variants
  --> $DIR/issue-32829-2.rs:56:9
   |
LL |         invalid();
   |         ^^^^^^^^^

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0015`.
